--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="model-content">
 
           <div class="col-12 user-img">
-            <img src="![statistics-icon.png]">
+            <img src="images/statistics-icon.png">
           </div>
 
           <form class="col-12">
