--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="model-content">
 
           <div class="col-12 user-img">
-            <img src="images/statistics-icon.png">
+            <img src="https://www.google.com.br/url?sa=i&url=https%3A%2F%2Fwww.cleanpng.com%2Fpng-computer-icons-statistics-chart-download-4284869%2F&psig=AOvVaw0XCUjVcR0BjsKKvCnvzs9M&ust=1585433150595000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCJCYofXUu-gCFQAAAAAdAAAAABAD">
           </div>
 
           <form class="col-12">
