--- a/correlacao.html
+++ b/correlacao.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width-device-width, initial-scale-1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Correlação</title>
-    <link rel="./correlacao.css">
+    <link rel=./correlacao.css>
 
 </head>
 <body>
