--- a/probabilidade.html
+++ b/probabilidade.html
@@ -18,7 +18,7 @@
     <title>Probabilidade</title>
 
 
-    <link rel="stylesheet" href="css/probabilidade.css">
+    <link rel="stylesheet" type="text/css" href="probabilidade.css">
 
 </head>
 <body>
