--- a/descritiva.html
+++ b/descritiva.html
@@ -16,7 +16,7 @@
     <title>Descritiva</title>
 
 
-    <link rel="stylesheet" href="css/probabilidade.css">
+    <link rel="stylesheet" type="text/css" href="probabilidade.css">
 
 </head>
 <body>
