--- a/contato.html
+++ b/contato.html
@@ -13,7 +13,7 @@
     <title>Contato</title>
 
 
-    <link rel="stylesheet" href="css/contato.css">
+    <link rel="stylesheet" typ="text/css" href="contato.css">
 
 </head>
 <body>
