--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width-device-width, initial-scale-1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SOLFTITEC</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 <body>
