Correção de nome

--- a/contato.html
+++ b/contato.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="card-title">
-        <h2 class="title">SOLFTITEC</h2>
+        <h2 class="title">SOLFTEC</h2>
     </div> 
     <form class="form" type="submit">
         <div class="card-top">
